--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -118,16 +118,18 @@ button[class*="toggleButton"] {
 }
 
 .navbar-donate-button {
-  background-color: var(--suffolk-light-gold);
-  color: var(--suffolk-dark-blue);
-  border-radius: 9999px;
-  margin-right: calc(.25 * var(--ifm-navbar-item-padding-horizontal));
-  margin-left: calc(.25 * var(--ifm-navbar-item-padding-horizontal));
+  background-color: var(--suffolk-light-gold) !important;
+  color: var(--suffolk-dark-blue) !important;
+  border-radius: 6px !important;
+  padding: 0.375rem 0.75rem !important;
+  font-weight: 600 !important;
+  margin-left: 0.5rem !important;
+  transition: all 0.2s ease-in-out !important;
 
   &:hover {
-    background-color: var(--suffolk-dark-gold);
-    color: White;
-    text-decoration: none;
+    background-color: var(--suffolk-dark-gold) !important;
+    color: white !important;
+    text-decoration: none !important;
   }
 }
 
